// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: FollowButton renders follow version 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": undefined,
        "borderColor": undefined,
        "borderRadius": 12,
        "borderStyle": "solid",
        "borderWidth": 1,
        "elevation": 0,
        "height": 32,
        "justifyContent": "center",
        "minWidth": 64,
        "padding": 0,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
        "width": 83,
      }
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "disabled": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 12,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            [
              {
                "height": 52,
              },
              undefined,
            ],
          ]
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
              },
              {
                "textAlign": "left",
              },
              [
                {
                  "letterSpacing": 1,
                  "marginHorizontal": 16,
                  "marginVertical": 9,
                  "textAlign": "center",
                },
                undefined,
                {
                  "textTransform": "uppercase",
                },
                {
                  "color": "#6200ee",
                  "fontFamily": "System",
                  "fontWeight": "500",
                },
                {
                  "fontFamily": "System",
                  "fontWeight": "500",
                },
                [
                  {
                    "color": undefined,
                    "fontFamily": "Poppins-SemiBold",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "letterSpacing": 0.015,
                    "lineHeight": 21,
                    "textTransform": "capitalize",
                  },
                  [
                    {
                      "color": undefined,
                      "margin": 0,
                      "minWidth": "100%",
                      "padding": 0,
                      "textAlign": "center",
                    },
                    undefined,
                  ],
                ],
              ],
            ]
          }
        >
          <Text
            style={
              [
                [
                  {
                    "color": undefined,
                  },
                  {
                    "fontFamily": "Poppins-SemiBold",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "letterSpacing": 0.04,
                    "lineHeight": 16,
                    "textAlign": "left",
                  },
                ],
                [
                  {
                    "color": undefined,
                    "margin": 0,
                    "minWidth": "100%",
                    "padding": 0,
                    "textAlign": "center",
                  },
                  undefined,
                ],
              ]
            }
          >
            Follow
          </Text>
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`component: FollowButton renders unfollow version 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": undefined,
        "borderColor": undefined,
        "borderRadius": 12,
        "borderStyle": "solid",
        "borderWidth": 1,
        "elevation": 0,
        "height": 32,
        "justifyContent": "center",
        "minWidth": 64,
        "padding": 0,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
        "width": 82,
      }
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "disabled": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 12,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            [
              {
                "height": 52,
              },
              undefined,
            ],
          ]
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
              },
              {
                "textAlign": "left",
              },
              [
                {
                  "letterSpacing": 1,
                  "marginHorizontal": 16,
                  "marginVertical": 9,
                  "textAlign": "center",
                },
                undefined,
                {
                  "textTransform": "uppercase",
                },
                {
                  "color": "#6200ee",
                  "fontFamily": "System",
                  "fontWeight": "500",
                },
                {
                  "fontFamily": "System",
                  "fontWeight": "500",
                },
                [
                  {
                    "color": undefined,
                    "fontFamily": "Poppins-SemiBold",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "letterSpacing": 0.015,
                    "lineHeight": 21,
                    "textTransform": "capitalize",
                  },
                  [
                    {
                      "color": undefined,
                      "margin": 0,
                      "minWidth": "100%",
                      "padding": 0,
                      "textAlign": "center",
                    },
                    undefined,
                  ],
                ],
              ],
            ]
          }
        >
          <Text
            style={
              [
                [
                  {
                    "color": undefined,
                  },
                  {
                    "fontFamily": "Poppins-SemiBold",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "letterSpacing": 0.04,
                    "lineHeight": 16,
                    "textAlign": "left",
                  },
                ],
                [
                  {
                    "color": undefined,
                    "margin": 0,
                    "minWidth": "100%",
                    "padding": 0,
                    "textAlign": "center",
                  },
                  undefined,
                ],
              ]
            }
          >
            Unfollow
          </Text>
        </Text>
      </View>
    </View>
  </View>
</View>
`;
